data/style.css
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 16px;
  margin: 0 auto;
  padding: 0;
  -moz-transition-time-function: ease;
  -moz-transition-duration: 1000ms;
}

#cheevo-h1 {
  margin-bottom: 0;
}

#cheevo-h2 {
  margin-top: 0;
}

ul {
  margin: 0;
  padding: 0;
}

/*top bar */
#top-bar {
  background-color: #ECECEC;
  position: relative;
  padding: 0 0 5px 5px;
  border: 1px solid #c6c6c6;
}

/*cheevo blocks*/
.cheevo-block {
  vertical-align: top;
  -moz-box-sizing: border-box;
  padding: 10px;
  background-image: -moz-linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.5) 50%),
                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
  outline: 1px solid #c6c6c6;
  display: inline-block;
  color: silver;
  margin: 0;
  position: relative;
  -moz-transition-time-function: ease;
  -moz-transition-duration: 600ms;
}

.name {
  -moz-transition-delay: 400ms;
  -moz-transition-time-function: ease;
  -moz-transition-duration: 200ms;
  margin-top: 0;
}

.message {
  padding: 5px 12px;
  color: black;
  -moz-transition: background-color 200ms linear;
}

.unachieved > h3, .awards-unachieved > h3 {
  padding: 5px 12px;
  color: black;
  border-color: #2D53AF;
  background-image: -moz-linear-gradient(center bottom , rgba(26, 26, 26, 2) 0px, transparent 0px),
                    -moz-linear-gradient(transparent, rgba(114, 114, 114, 0.1) 1px, rgba(81, 81, 81, 0.2) 80%),
                    -moz-linear-gradient(rgb(207, 219, 236), rgb(207, 219, 236));
}

.achieved > h3, .awards-achieved > h3 {
  padding: 5px 12px;
  color: white;
  border-color: #2D53AF;
  background-repeat: no-repeat;
  background-position: 90%;
  background-image: url(tick.png),
                    -moz-linear-gradient(top,#5689DB 0%,#4D7BD6 100%);
}

.check {
  float: right;
  padding-top: 5px;
}

.cheevo-block:hover {
  -moz-transition-delay: 400ms;
  -moz-transition-time-function: ease;
  -moz-transition-duration: 200ms;
  background-image: -moz-linear-gradient(rgba(250, 250, 250, 1), rgba(255, 255, 255, 1) 50%),
                    -moz-linear-gradient(-moz-dialog, -moz-dialog);
}


.awards {
  list-style: none;
  width: 60%;
  position: absolute;
  bottom: 5px;
  right: 5px;
  display: block;
}

.bronze, .silver, .gold,
.bronze-unachieved, .silver-unachieved, .gold-unachieved,
.bronze-achieved, .silver-achieved, .gold-achieved {
  width: 20%;
  height: 20px;
  color: white;
  position: relative;
  display: inline-block;
  float: right;
}

.achieved > div .bronze {
  background: url(award_star_bronze_1.png) no-repeat right;
}

.achieved > div .silver {
  background: url(award_star_silver_1.png) no-repeat right;
}

.achieved > div .gold {
  background: url(award_star_gold_1.png) no-repeat right;
}

.unachieved > div .bronze {
  background: gray;
}
.unachieved > div > .silver {
  background: gray;
}
.unachieved > div > .gold {
  background: gray;
}

.awards-unachieved > ol > .bronze-unachieved {
  background: gray;
}
.awards-unachieved > ol > .silver-unachieved {
  background: gray;
}
.awards-unachieved > ol > .gold-unachieved {
  background: gray;
}

.awards-unachieved > ol > .bronze-achieved {
  background: url(award_star_bronze_1.png) no-repeat right;
}
.awards-unachieved > ol > .silver-achieved {
  background: url(award_star_silver_1.png) no-repeat right;
}
.awards-unachieved > ol > .gold-achieved {
  background: url(award_star_gold_1.png) no-repeat right;
}

#twitterLink, .twitter-share-button {
  position: absolute;
  top: 10px;
  right: 10px;
}


@media all and (min-width: 1200px) {
  body {
    width: 1000px;
  }
  .cheevo-block {
    width: 250px;
    height: 250px;
  }
}

@media all and (max-width: 1200px) and (min-width: 900px) {
  body {
    width: 801px;
  }
  .cheevo-block {
    width: 267px;
    height: 267px;
  }
}

@media all and (max-width: 900px) and (min-width: 620px) {
  body {
    width: 570px;
    font-size: 14px;
  }
  .cheevo-block {
    width: 285px;
    height: 250px;
  }
}

@media all and (max-width: 620px) and (min-width: 400px) {
  body {
    width: 375px;
    font-size: 12px;
  }
  .cheevo-block {
    width: 375px;
    min-height: 100px;
  }
}

@media all and (max-width: 400px) {
  body {
    width: 100%;
    font-size: 12px;
  }
  .cheevo-block {
    display: block;
    min-height: 80px;
  }
}

